--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ keywords: piráti, česká pirátská strana, koronavirus, CORVID-19
 i#mediaStorage: bydleni #obrazky a pdf jsou na https://a.pirati.cz/jihomoravsky/
 
 administrator:
-  email: jitka.novotna@pirati.cz # mail(y), kam pujdou chybove vystupy; vice e-mailu oddelujte carkou
+  email: jitka.novotna@pirati.cz, freitas.zuzana@gmail.com # mail(y), kam pujdou chybove vystupy; vice e-mailu oddelujte carkou
 
 organization:
   name: Rozcestník Pirátů ke koronaviru
