--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -16,6 +16,7 @@ main:
     name: Rozcestník
   - link: https://pirati.cz/koronavirus
     name: Aktuality
+    external: true
   - link: /reseni/
     name: Naše řešení
     match: vyresi
