--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title: Koronavirový rozcestník # To co je napsané na tabu ve kterém je strá
 email: info@pirati.cz
 description: >-
   Rozcestník Pirátů ke koronaviru
-keywords: piráti, česká pirátská strana, koronavirus, CORVID-19
+keywords: piráti, česká pirátská strana, koronavirus, COVID-19
 
 i#mediaStorage: bydleni #obrazky a pdf jsou na https://a.pirati.cz/jihomoravsky/
 
